--- a/DeviceFrameworksDemo/Base.lproj/Main.storyboard
+++ b/DeviceFrameworksDemo/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Device Frameworks-->
@@ -46,7 +47,22 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ce8-Wg-NHW" id="IMh-n1-coZ">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNs-Hx-n5X">
+                                                    <rect key="frame" x="8" y="11.5" width="60" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="iNs-Hx-n5X" firstAttribute="leading" secondItem="IMh-n1-coZ" secondAttribute="leading" constant="8" id="bwX-77-vDn"/>
+                                                <constraint firstItem="iNs-Hx-n5X" firstAttribute="centerY" secondItem="IMh-n1-coZ" secondAttribute="centerY" id="lYK-13-7qi"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="h0N-2g-QQ7" kind="show" id="9XL-gz-XQM"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="GuU-NE-b1e">
                                         <rect key="frame" x="0.0" y="152" width="320" height="44"/>
@@ -102,7 +118,51 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="weL-QB-L02" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1542" y="25"/>
+            <point key="canvasLocation" x="1556" y="-71"/>
+        </scene>
+        <!--Camera View Controller-->
+        <scene sceneID="naA-rb-XN0">
+            <objects>
+                <viewController id="h0N-2g-QQ7" customClass="CameraViewController" customModule="DeviceFrameworksDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GPx-lb-4GA"/>
+                        <viewControllerLayoutGuide type="bottom" id="eit-gC-CF7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8Ih-Bw-EGg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pgD-sn-UU4">
+                                <rect key="frame" x="135" y="518" width="50" height="30"/>
+                                <state key="normal" title="Upload"/>
+                                <connections>
+                                    <action selector="buttonDidTap:" destination="h0N-2g-QQ7" eventType="touchUpInside" id="UUK-fj-x75"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9G8-YW-MK0">
+                                <rect key="frame" x="0.0" y="64" width="320" height="289"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="9G8-YW-MK0" secondAttribute="height" multiplier="320:289" id="sbk-K1-Zku"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9G8-YW-MK0" firstAttribute="top" secondItem="GPx-lb-4GA" secondAttribute="bottom" id="GcH-ML-5gH"/>
+                            <constraint firstItem="pgD-sn-UU4" firstAttribute="centerX" secondItem="8Ih-Bw-EGg" secondAttribute="centerX" id="O1U-Vb-9OK"/>
+                            <constraint firstItem="9G8-YW-MK0" firstAttribute="leading" secondItem="8Ih-Bw-EGg" secondAttribute="leading" id="Xzh-uu-n9l"/>
+                            <constraint firstItem="eit-gC-CF7" firstAttribute="top" secondItem="pgD-sn-UU4" secondAttribute="bottom" constant="20" id="hg5-Ar-UQk"/>
+                            <constraint firstAttribute="trailing" secondItem="9G8-YW-MK0" secondAttribute="trailing" id="y3D-7c-Rin"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="imageView" destination="9G8-YW-MK0" id="jdB-I2-3aX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tXn-Hd-Ayq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1556" y="560"/>
         </scene>
         <!--Device Frameworks-->
         <scene sceneID="VON-7E-hdJ">
